@@ -14,8 +14,7 @@ static void other_tests()
     // Test cases not covered by the pipeline: string as key, convert
     // in place
     RC4 r(reinterpret_cast<unsigned char const*>("quack"));
-    auto data = std::unique_ptr<unsigned char[]>(
-        new unsigned char[6], std::default_delete<unsigned char[]>());
+    auto data = std::make_unique<unsigned char[]>(6);
     memcpy(data.get(), "potato", 6);
     r.process(data.get(), 6);
     assert(memcmp(data.get(), "\xa5\x6f\xe7\x27\x2b\x5c", 6) == 0);
